<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@+id/image_profile"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/more"
                app:srcCompat="@drawable/ic_more" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_post"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimarySoft"
                android:contentDescription="@string/image_post"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                tools:ignore="MissingConstraints" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/image_post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/like_post"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="3dp"
                    android:contentDescription="@string/like"
                    app:srcCompat="@drawable/ic_love"
                    app:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/like_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/like_post"
                    android:layout_alignBottom="@+id/like_post"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/like_post"
                    android:gravity="center"
                    android:text="@string/like"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/comment_post"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="3dp"
                    android:layout_toEndOf="@+id/like_count"
                    android:contentDescription="@string/comment"
                    app:srcCompat="@drawable/ic_chat"
                    app:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/comment_post"
                    android:layout_alignBottom="@+id/comment_post"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/comment_post"
                    android:gravity="center"
                    android:text="@string/like"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/save_post"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/save"
                    app:srcCompat="@drawable/ic_bookmark"
                    app:tint="@color/colorPrimaryDark" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.hendraanggrian.appcompat.widget.SocialTextView
            android:id="@+id/description_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="480dp" />

</RelativeLayout>